Parser refactor --> Implements Printscript iterator